force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <label>Inventory</label>
    <nameField>
        <label>Inventory Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>