force-app/main/default/objects/Inventory__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Griswold</fullName>
            </value>
            <value>
                <fullName>Wagner</fullName>
            </value>
            <value>
                <fullName>Victor</fullName>
            </value>
            <value>
                <fullName>Atlanta Stove Works</fullName>
            </value>
            <value>
                <fullName>Vollrath</fullName>
            </value>
            <value>
                <fullName>Favourite</fullName>
            </value>
            <value>
                <fullName>Lodge</fullName>
            </value>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Stargazer</fullName>
            </value>
            <value>
                <fullName>Smithey Ironware Co.</fullName>
            </value>
            <value>
                <fullName>Finex</fullName>
            </value>
            <value>
                <fullName>Borough</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>