force-app/main/default/objects/Inventory__c/fields/Date_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquired__c</fullName>
    <description>The date the item was acquired.</description>
    <label>Date Acquired</label>
    <type>Date</type>
</CustomField>