force-app/main/default/objects/Inventory__c/fields/Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_ID__c</fullName>
    <description>The unique ID associated with an inventory item.</description>
    <displayFormat>INV-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Item ID</label>
    <type>AutoNumber</type>
</CustomField>