force-app/main/default/objects/Inventory__c/fields/Item_Notes__c.field-meta.xml
<CustomField>
    <fullName>Item_Notes__c</fullName>
    <description>Any notes or details related to the inventory item.</description>
    <label>Item Notes</label>
    <type>TextArea</type>
</CustomField>