force-app/main/default/objects/Inventory__c/recordTypes/Modern.recordType-meta.xml
<RecordType>
    <fullName>Modern</fullName>
    <active>true</active>
    <label>Modern</label>
</RecordType>