force-app/main/default/objects/Inventory__c/recordTypes/Vintage.recordType-meta.xml
<RecordType>
    <fullName>Vintage</fullName>
    <active>true</active>
    <label>Vintage</label>
</RecordType>